--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Keyword -->
     <meta
       name="keywords"
-      content="Tamtree India, Tamtree Technology, Namakkal, KilSathambur, KeelSathambur, Private Limited, Web Development, App Development, SAP, PeopleSoft, Free Training, Paramathi, Velur, IT Company, Information Technology, Coding Class"
+      content="Tamtree India Private Limited, Namakkal, Kilsathambur, Keelsathambur, Web Development, App Development, SAP, PeopleSoft, Free Training, Paramathi Velur, IT Company, Information Technology, Coding Class"
     />
     <!-- HRef Tag -->
     <link
