--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       content="Tamtree India Private Limited, Namakkal, Kilsathambur, Keelsathambur, Web Development, App Development, SAP, PeopleSoft, Free Training, Paramathi Velur, IT Company, Information Technology, Coding Class"
     />
     <!-- HRef Tag -->
-    <link
+    <!-- <link
       rel="alternate"
       href="https://tamtreeindia.online/"
       hreflang="en-IN"
@@ -44,7 +44,7 @@
       rel="alternate"
       href="https://tamtreeindia.online/"
       hreflang="en-US"
-    />
+    /> -->
     <!-- Robots Tag -->
     <meta name="robots" content="index, nofollow, noimageindex" />
     <!-- Schema Markup -->
@@ -53,7 +53,7 @@
         "@context": "http://www.schema.org",
         "@type": "Organization",
         "name": "Tamtree India",
-        "url": "https://tamtreeindia.online/",
+        <!-- "url": "https://tamtreeindia.online/", -->
         "description": "Tamtree India: Your trusted IT partner in Kilsathambur, Namakkal. We specialize in web and mobile app development and SAP and PeopleSoft services.",
         "address": {
           "@type": "PostalAddress",
